Java 16 Features - JEP 397: Sealed Classes (Second Preview)